image align css fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,6 +40,9 @@ h2 {
   padding: 30px;
   margin: 40px;
   border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .carousel a {
   margin: 0 auto;
